# GMvpn

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: incident-playbook.md  product-positioning.md  release-checklist.md  roadmap.md  schema-compatibility.md
docs/adr/: 0001-foundation.md  0002-xray-runtime-architecture.md  0003-ios-bridge-protocol.md  0004-android-runtime-contract.md  0005-first-mvp-runtime-target.md
examples/: demo_manifest.json  demo_private_key.pem  demo_public_key.pem  provider_profile_manifest.json
src/vpn_client/: __init__.py  android_runtime.py  backend_state.py  cli.py  client_platform.py  config.py  dataplane.py  desktop_policy.py  health.py  incident.py  ios_bridge.py  linux.py  models.py  platform.py  platform_adapters.py  platform_targets.py  policy.py  probe.py  process_adapter.py  provider_compiler.py  recovery.py  runtime.py  runtime_support.py  runtime_tick.py  scheduler.py  security.py  session.py  state.py  supervisor.py  telemetry.py  transport.py  transport_base.py  transport_tcp.py  xray.py
src/vpnclient/backends/: mock_backend.py
src/vpnclient/core/: config.py  (+5 more)
tests/: test_android_runtime.py  test_cli.py  test_config.py  test_dataplane.py  test_generate_demo_assets.py  test_incident.py  test_linux.py  test_platform_adapters.py  test_policy.py  test_provider_compiler.py  test_recovery.py  test_release_guardrail.py  test_runtime.py  test_runtime_support.py  test_session.py  test_state.py  test_telemetry.py  test_xray_config_smoke.py
tools/: generate_demo_assets.py  release_guardrail.py  xray_config_smoke.py
